--- a/css/index.css
+++ b/css/index.css
@@ -1058,9 +1058,7 @@ main .main-video > ul > li:nth-child(n+2) {
 }
 
 .footer-links > div {
-  width: 1044px;
-  height: 174px;
-  background-color: #66605b;
+  width: 1050px;
   transform: translateX(340px) translateY(30px);
   position: relative;
 }
@@ -1088,12 +1086,189 @@ main .main-video > ul > li:nth-child(n+2) {
 .footer-links > div > div.links > ul.sites > li {
   float: left;
   height: 18px;
-  border-right: 2px solid #b0b0b0;
-  padding: 0 3px 0 3px;
 }
 
 .footer-links > div > div.links > ul.sites > li > a {
   font-size: 12px;
   line-height: 18px;
+  color: #757575;
+  padding: 0 4px 0 4px;
+  border-left: 2px solid #b0b0b0;
+  transition: color .4s;
+}
+
+.footer-links > div > div.links > ul.sites > li:hover > a {
+  color: #ff6700;
+}
+
+.footer-links > div > div.links > ul.sites > li:nth-child(1) > a {
+  border: none;
+  padding-left: 0;
+}
+
+.footer-links > div > div.links > ul.list {
+  height: 14px;
+  margin-top: 2px;
+  margin-bottom: 4px;
+}
+
+.footer-links > div > div.links > ul.list > li {
+  float: left;
+  line-height: 14px;
+  margin-right: 2px;
+}
+
+.footer-links > div > div.links > ul.list > li > a {
+  font-size: 12px;
   color: #b0b0b0;
+}
+
+.footer-links > div > div.links > ul.list > li:hover > a {
+  color: #ff6700;
+}
+
+.footer-links > div > div.links > ul.list-t {
+  margin-top: 9px;
+}
+
+.footer-links > div > div.links > ul.list-t img {
+  height: 28px;
+  width: auto;
+}
+
+.footer-links > div > div.links > h3 {
+  margin-top: 42px;
+  margin-left: 364px;
+  font-size: 18px;
+  color: #bababa;
+  letter-spacing: 2px;
+}
+
+aside {
+  position: fixed;
+  bottom: 180px;
+  right: 0;
+  z-index: 99;
+}
+
+aside > a {
+  position: relative;
+  display: block;
+  width: 82px;
+  height: 90px;
+  margin-top: -1px;
+  background-color: #fff;
+  border: 1px solid #f5f5f5;
+  text-align: center;
+}
+
+aside > a > div {
+  position: absolute;
+  top: 14px;
+  left: 27px;
+  width: 30px;
+  height: 30px;
+}
+
+aside > a > span {
+  position: absolute;
+  top: 56px;
+  left: 13px;
+  color: #757575;
+}
+
+aside > a:nth-child(1) > div {
+  background: url(/项目练习/小米官网/images/sj.png) no-repeat 50% 50%;
+  background-size: cover;
+}
+
+aside > a:nth-child(1) > div:hover {
+  background: url(/项目练习/小米官网/images/sjc.png) no-repeat 50% 50%;
+  background-size: cover;
+}
+
+aside > a:nth-child(1):hover > article {
+  display: block;
+}
+
+aside > a:nth-child(1):hover > i {
+  display: block;
+}
+
+aside > a:nth-child(1) > article {
+  position: absolute;
+  top: 0px;
+  left: -140px;
+  width: 100px;
+  height: 165px;
+  padding: 14px;
+  background: #fff;
+  border: 1px solid #f5f5f5;
+  z-index: 99;
+  display: none;
+}
+
+aside > a:nth-child(1) > article > img {
+  display: block;
+  width: 100px;
+  height: 100px;
+  margin: 6px auto;
+}
+
+aside > a:nth-child(1) > article > span {
+  display: block;
+  width: 82px;
+  margin: 14px auto 0;
+  color: #757575;
+  text-align: center;
+}
+
+aside > a:nth-child(1) > i {
+  position: absolute;
+  top: 40px;
+  left: -22px;
+  font-size: 30px;
+  color: #fff;
+  display: none;
+  z-index: 99;
+}
+
+aside > a:nth-child(2) > div {
+  background: url(/项目练习/小米官网/images/ren.png) no-repeat 50% 50%;
+  background-size: cover;
+}
+
+aside > a:nth-child(2) > div:hover {
+  background: url(/项目练习/小米官网/images/renc.png) no-repeat 50% 50%;
+  background-size: cover;
+}
+
+aside > a:nth-child(3) > div {
+  background: url(/项目练习/小米官网/images/gj.png) no-repeat 50% 50%;
+  background-size: cover;
+}
+
+aside > a:nth-child(3) > div:hover {
+  background: url(/项目练习/小米官网/images/gjc.png) no-repeat 50% 50%;
+  background-size: cover;
+}
+
+aside > a:nth-child(4) > div {
+  background: url(/项目练习/小米官网/images/ej.png) no-repeat 50% 50%;
+  background-size: cover;
+}
+
+aside > a:nth-child(4) > div:hover {
+  background: url(/项目练习/小米官网/images/ejc.png) no-repeat 50% 50%;
+  background-size: cover;
+}
+
+aside > a:nth-child(5) > div {
+  background: url(/项目练习/小米官网/images/gwc.png) no-repeat 50% 50%;
+  background-size: cover;
+}
+
+aside > a:nth-child(5) > div:hover {
+  background: url(/项目练习/小米官网/images/gwcc.png) no-repeat 50% 50%;
+  background-size: cover;
 }
