--- a/css/index.scss
+++ b/css/index.scss
@@ -2,6 +2,7 @@
     width: 1226px;
     margin: 0 auto;
 }
+// body{filter: grayscale(100%);}
 header{
     width: 100%;
     height: 40px;
@@ -74,11 +75,9 @@ header{
                         }
                         >div{
                             height: 150px;
-                        }
-                        
+                        } 
                     }
                 }
-
             }
         }  
         >.nav-right{
@@ -366,7 +365,6 @@ section.carousel{
         margin-bottom: 14px;
         position: relative;
         >.carousel-chart-nav{
-            
             width: 235px;
             height: 100%;
             background: rgba(105,101,101,.6);
@@ -550,7 +548,6 @@ section.carousel{
     width: 1px;
     height: 70px;
 }
-
 main{
     width: 100%;
     background-color: #f5f5f5;
@@ -733,8 +730,7 @@ main{
             }
             >li:nth-child(n+5){
                 margin-top: 14px;
-            }
-            
+            } 
         }
     }
     .main-video{
@@ -753,7 +749,6 @@ main{
             }
         }
     }
-
 }
 .footer-nav{
     width: 100%;
@@ -793,8 +788,7 @@ main{
                             color: #ff6700;
                         }
                     }
-                }
-                
+                }     
             }
             >li:nth-child(5){
                 border:none;
@@ -924,9 +918,7 @@ main{
     margin: 0 auto;
     background-color: #f5f5f5;
     >div{
-        width:1044px;
-        height:174px;
-        background-color: #66605b;
+        width: 1050px;
         transform: translateX(340px) translateY(30px);
         position: relative;
         >.logo-footer{
@@ -947,16 +939,181 @@ main{
                 >li{
                     float: left;
                     height: 18px;
-                    border-right: 2px solid #b0b0b0;
-                    padding: 0 3px 0 3px;
                     >a{
                         font-size: 12px;
                         line-height: 18px;
-                        color: #b0b0b0;
+                        color: #757575;
+                        padding: 0 4px 0 4px;
+                        border-left: 2px solid #b0b0b0;
+                        transition: color .4s;
+                    }
+                    &:hover{
+                        >a{
+                            color:#ff6700;
+                        } 
+                    }
+                }
+                >li:nth-child(1){
+                    >a{
+                        border: none;
+                        padding-left: 0;
                     }
                 }
             }
+            >ul.list{
+                height: 14px;
+                margin-top: 2px;
+                margin-bottom: 4px;
+                >li{
+                    float:left;
+                    line-height: 14px;
+                    margin-right: 2px;                
+                    >a{
+                        font-size:12px;
+                        color:#b0b0b0;
+                    }
+                    &:hover{
+                        >a{
+                            color: #ff6700;
+                        }
+                    }
+                }
+            }
+            >ul.list-t{
+                margin-top: 9px;
+                img{
+                    height: 28px;
+                    width: auto;
+                }
+            }
+            >h3{
+                margin-top: 42px;
+                margin-left: 364px;
+                font-size:18px;
+                color:#bababa;
+                letter-spacing: 2px;
+            }
         }
-
+    }  
+}
+aside{
+    position: fixed;
+    bottom: 180px;
+    right: 0;
+    z-index: 99;
+    >a{
+        position: relative;
+        display: block;
+        width: 82px;
+        height: 90px;
+        margin-top: -1px;
+        background-color: #fff;
+        border: 1px solid #f5f5f5;
+        text-align: center;
+        >div{
+            position: absolute;
+            top: 14px;
+            left: 27px;
+            width: 30px;
+            height: 30px;
+        }
+        >span{
+            position: absolute;
+            top: 56px;
+            left: 13px;
+            color: #757575;
+        }
+    }
+    >a:nth-child(1){
+        >div{
+            background: url(/项目练习/小米官网/images/sj.png) no-repeat 50% 50%;
+            background-size: cover;
+            &:hover{
+                background: url(/项目练习/小米官网/images/sjc.png) no-repeat 50% 50%;
+                background-size: cover;
+            }
+        }
+        &:hover{
+            >article{
+                display: block;
+            }
+            >i{
+                display: block;
+            }
+        }
+        >article{
+            position: absolute;
+            top: 0px;
+            left: -140px;
+            width: 100px;
+            height: 165px;
+            padding: 14px;
+            background: #fff;
+            border: 1px solid #f5f5f5;
+            z-index: 99;
+            display: none;
+            >img{
+                display: block;
+                width: 100px;
+                height: 100px;
+                margin: 6px auto;
+            }
+            >span{
+                display: block;
+                width: 82px;
+                margin: 14px auto 0;
+                color: #757575;
+                text-align: center;
+            }
+        }
+        >i{
+            position: absolute;
+            top: 40px;
+            left:-22px;
+            font-size: 30px;
+            color: #fff;
+            display: none;
+            z-index: 99;
+        }
+    }
+    >a:nth-child(2){
+        >div{
+            background: url(/项目练习/小米官网/images/ren.png) no-repeat 50% 50%;
+            background-size: cover;
+            &:hover{
+                background: url(/项目练习/小米官网/images/renc.png) no-repeat 50% 50%;
+                background-size: cover;
+            }
+        }
+    }
+    >a:nth-child(3){
+        >div{
+            background: url(/项目练习/小米官网/images/gj.png) no-repeat 50% 50%;
+            background-size: cover;
+            &:hover{
+                background: url(/项目练习/小米官网/images/gjc.png) no-repeat 50% 50%;
+                background-size: cover;
+            }
+        }
+    }
+    >a:nth-child(4){
+        >div{
+            background: url(/项目练习/小米官网/images/ej.png) no-repeat 50% 50%;
+            background-size: cover;
+            &:hover{
+                background: url(/项目练习/小米官网/images/ejc.png) no-repeat 50% 50%;
+                background-size: cover;
+            }
+        }
+    }
+    >a:nth-child(5){
+        >div{
+            background: url(/项目练习/小米官网/images/gwc.png) no-repeat 50% 50%;
+            background-size: cover;
+            &:hover{
+                background: url(/项目练习/小米官网/images/gwcc.png) no-repeat 50% 50%;
+                background-size: cover;
+            }
+        }
     }
 }
